<resources>
    <string name="app_name">Inventory</string>
    <string name="sell">Sell</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Item Name <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="first_name_req">First Name <font color='#FF0000'>*</font></string>
    <string name="last_name_req">Last Name <font color='#FF0000'>*</font></string>
    <string name="phone_number_req">Phone Number <font color='#FF0000'>*</font></string>
    <string name="address_req">Address <font color='#FF0000'>*</font></string>
    <string name="email_req">Email <font color='#FF0000'>*</font></string>
    <string name="add_new_owner">add_new_owner</string>
    <string name="add_owner_fragment_title">Add Owner</string>
    <string name="purchase_location_req">Purchase location<font color='#FF0000'>*</font></string>
    <string name="location_req">Location<font color='#FF0000'>*</font></string>
    <string name="color_req">Color<font color='#FF0000'>*</font></string>
    <string name="date_req">Date<font color='#FF0000'>*</font></string>
    <string name="category_req">Category<font color='#FF0000'>*</font></string>
    <string name="category_item">Category Item:</string>
    <string name="Category">Kategoria:</string>
    <string name="color">Color:</string>
    <string name="owner">Owner:</string>
    <string name="purchase_location">Purchase location:</string>
    <string name="location_item">Location item:</string>
    <string name="date_added">Date added</string>
    <string name="purchase_date">Purchase date</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="change_to_item_list">change to item list</string>
    <string name="phone_number">Phone number:</string>
    <string name="address">Address:</string>
    <string name="email">Email:</string>
</resources>